--- a/index.html
+++ b/index.html
@@ -30,7 +30,51 @@
 </head>
 
 <body>
-    <h1>hello</h1>
+    <!-- main container -->
+    <main class="max-w-screen-2xl mx-auto px-16 lg:px-28">
+        <!-- header section -->
+        <header class="flex flex-col md:flex-row pt-10 mb-20 justify-between">
+            <!-- text contend -->
+            <div class="flex items-center w-full">
+                <div>
+                    <h1 class="text-5xl md:text-7xl font-bold">
+                        It's good <br>
+                        tea time at The <br>
+                        Tea House
+                    </h1>
+                    <br>
+                    <p class="text-gray-500 w-full md:w-3/4">
+                        Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <br>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white text-lg">
+                        Explore More
+                        <i class="fa-solid fa-arrow-right ml-1 -rotate-45"></i>
+                    </button>
+                </div>
+            </div>
+            <!-- image contend -->
+            <div class="relative w-full mt-10">
+                <!-- image -->
+                <div>
+                    <img src="./images/banner.png" alt="Banner img" class="w-full h-auto">
+                </div>
+                <!-- card -->
+                <div
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-7 lg:py-4 rounded-lg top-40 sm:top-52 md:top-96 md:left-32 lg:left-28">
+                    <!-- star icon -->
+                    <div>
+                        <i class="fa-solid fa-star text-amber-500 text-2xl"></i>
+                    </div>
+                    <!-- text -->
+                    <div class="ml-3">
+                        <h2 class="lg:text-2xl font-bold">5.00</h2>
+                        <p class="text-gray-500 text-lg">Trust Pilot Ratings</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+    </main>
 </body>
 
 </html>
