--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
 <body>
     <!-- main container -->
-    <main class="max-w-screen-2xl mx-auto px-16 lg:px-28">
+    <main class="max-w-screen-2xl mx-auto px-10 lg:px-28">
         <!-- header section -->
-        <header class="flex flex-col md:flex-row pt-10 mb-20 justify-between">
+        <header class="md:flex pt-10 mb-20">
             <!-- text contend -->
-            <div class="flex items-center w-full">
+            <div class="flex items-center md:w-2/4">
                 <div>
-                    <h1 class="text-5xl md:text-7xl font-bold">
+                    <h1 class="text-5xl lg:text-7xl font-bold">
                         It's good <br>
                         tea time at The <br>
                         Tea House
@@ -54,14 +54,14 @@
                 </div>
             </div>
             <!-- image contend -->
-            <div class="relative w-full mt-10">
+            <div class="relative md:w-2/4 mt-10">
                 <!-- image -->
                 <div>
                     <img src="./images/banner.png" alt="Banner img" class="w-full h-auto">
                 </div>
                 <!-- card -->
                 <div
-                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-7 lg:py-4 rounded-lg top-40 sm:top-52 md:top-96 md:left-32 lg:left-28">
+                    class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-7 lg:py-4 rounded-lg top-52 left-10 md:top-56 md:left-10 lg:left-28 lg:top-96">
                     <!-- star icon -->
                     <div>
                         <i class="fa-solid fa-star text-amber-500 text-2xl"></i>
@@ -74,6 +74,52 @@
                 </div>
             </div>
         </header>
+        <!-- feature products section -->
+        <section class="py-10 lg:py-20">
+            <!-- title -->
+            <div class="text-center">
+                <h1 class="text-3xl md:text-5xl font-bold mb-5">Our Featured Products</h1>
+                <p class="text-gray-500 md:w-3/4 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. </p>
+            </div>
+            <!-- grid card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 text-center mt-10">
+                <!-- card-1 -->
+                <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
+                    <img src="./images/tea-1.png" alt="" class="mx-auto pt-10 w-2/4">
+                    <div class="p-4">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
+                    <img src="./images/tea-2.png" alt="" class="mx-auto pt-10 w-2/4">
+                    <div class="p-4">
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
+                    <img src="./images/tea-3.png" alt="" class="mx-auto pt-10 w-2/4">
+                    <div class="p-4">
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- card-4 -->
+                <div class="bg-gray-50 rounded-lg shadow-md overflow-hidden">
+                    <img src="./images/tea-4.png" alt="" class="mx-auto pt-10 w-2/4">
+                    <div class="p-4">
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
+                        <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
