--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
             <!-- title -->
             <div class="text-center">
                 <h1 class="text-3xl md:text-5xl font-bold mb-5">Our Featured Products</h1>
-                <p class="text-gray-500 md:w-3/4 mx-auto">There are many variations of passages of Lorem Ipsum available,
+                <p class="text-gray-500 md:w-3/4 mx-auto">There are many variations of passages of Lorem Ipsum
+                    available,
                     but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even slightly
                     believable. </p>
@@ -117,6 +118,41 @@
                         <h2 class="text-2xl font-bold">Green Tea</h2>
                         <p class="text-gray-500">Creamer could be replaced by fresh milk</p>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- great tea section -->
+        <section class="md:mt-10">
+            <!-- great main container -->
+            <div class="grid grid-cols-1 md:grid-cols-2">
+                <!-- image section -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-4 md:w-5/6">
+                    <div class="h-36 bg-gradient-to-r from-red-100 to-red-50 rounded-lg"></div>
+                    <div class="bg-orange-50 rounded-lg row-span-2">
+                        <img class="mx-auto my-7" src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="bg-gray-100 rounded-lg row-span-2">
+                        <img class="mx-auto my-7" src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-gray-200 to-white rounded-lg"></div>
+                </div>
+                <!-- text section -->
+                <div class="mt-10 md:mt-0">
+                    <h1 class="text-2xl md:text-4xl font-bold mb-7">Great Tea, Freshly <br> Presented</h1>
+                    <p class="text-gray-500 mb-14">The meaning of gong cha is chanese is to provide the best tea to
+                        emperor
+                        from all possessions .
+                        It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
+                        deeply appreciated by its custoers because of good words of mouth and unique customized service
+                        orginated from Taiwan.</p>
+                    <h2 class="text-lg md:text-xl font-bold mt-7 mb-2">Unique Taste</h2>
+                    <p class="text-gray-500 md:w-3/4">A Unique and different style from other teapots gives a luxurious
+                        and
+                        minimalist impression</p>
+                    <h2 class="text-lg md:text-xl font-bold mt-7 mb-2">Premium Quality</h2>
+                    <p class="text-gray-500 md:w-3/4">Premium Quality that makes tea more elegant and more durable when
+                        you
+                        use it.</p>
                 </div>
             </div>
         </section>
