review section completed withouth Responsive

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body>
     <!-- main container -->
     <main class="max-w-screen-2xl mx-auto px-10 lg:px-28">
+
         <!-- header section -->
         <header class="md:flex pt-10 mb-20">
             <!-- text contend -->
@@ -74,6 +75,7 @@
                 </div>
             </div>
         </header>
+
         <!-- feature products section -->
         <section class="py-10 lg:py-20">
             <!-- title -->
@@ -121,6 +123,7 @@
                 </div>
             </div>
         </section>
+
         <!-- great tea section -->
         <section class="md:mt-10">
             <!-- great main container -->
@@ -153,6 +156,86 @@
                     <p class="text-gray-500 md:w-3/4">Premium Quality that makes tea more elegant and more durable when
                         you
                         use it.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- review section -->
+        <section class="mt-20">
+            <!-- review main container -->
+            <div
+                class="bg-gradient-to-r from-orange-400 to-red-600 p-14 rounded-lg grid gap-4 grid-cols-1 md:grid-cols-2 text-white">
+                <!-- text-section -->
+                <div class="flex items-center">
+                    <div>
+                        <h1 class="text-xl md:text-6xl font-bold mb-7">Meet Our Super <br> Clients</h1>
+                        <p class="md:w-3/4">There are many variations of passages of Lorem Ipsum available, but the
+                            majority
+                            have suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even
+                            slightly
+                            believable. </p>
+                        <button class="bg-white text-orange-600 font-medium px-4 py-2 rounded-lg mt-5">Show All</button>
+                    </div>
+                </div>
+                <!-- review-section -->
+                <div class="py-20">
+                    <div class="relative">
+                        <!-- middle card -->
+                        <div class="absolute z-10 top-32 left-5">
+                            <div class="relative h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                                <!-- img client -->
+                                <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                    <img class="p-1" src="./images/client.png" alt="">
+                                </div>
+                                <div>
+                                    <p class="text-gray-500">We are providing the best and suitable home insurance
+                                        services
+                                        for
+                                        the people who are
+                                        interested to treatment</p>
+                                    <h3 class="text-black font-medium text-xl mt-7">Ilham Yuda</h3>
+                                    <p class="text-gray-500">Businessman</p>
+                                </div>
+                                <div class="absolute right-6 bottom-6"><img class="w-7" src="./images/circles.png"
+                                        alt=""></div>
+                            </div>
+                        </div>
+                        <!-- top card -->
+                        <div
+                            class="relative left-36 opacity-40 h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                            <!-- img client -->
+                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="./images/client.png" alt="">
+                            </div>
+                            <div>
+                                <p class="text-gray-500">We are providing the best and suitable home insurance services
+                                    for
+                                    the people who are
+                                    interested to treatment</p>
+                                <h3 class="text-black font-medium text-xl mt-7">Ilham Yuda</h3>
+                                <p class="text-gray-500">Businessman</p>
+                            </div>
+                        </div>
+
+                        <!-- bottom card -->
+                        <div
+                            class="relative left-36 top-10 opacity-40 h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                            <!-- img client -->
+                            <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                                <img class="p-1" src="./images/client.png" alt="">
+                            </div>
+                            <div>
+                                <p class="text-gray-500">We are providing the best and suitable home insurance services
+                                    for
+                                    the people who are
+                                    interested to treatment</p>
+                                <h3 class="text-black font-medium text-xl mt-7">Ilham Yuda</h3>
+                                <p class="text-gray-500">Businessman</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
