completed review section with Responsive

--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
         <section class="mt-20">
             <!-- review main container -->
             <div
-                class="bg-gradient-to-r from-orange-400 to-red-600 p-14 rounded-lg grid gap-4 grid-cols-1 md:grid-cols-2 text-white">
+                class="bg-gradient-to-r from-orange-400 to-red-600 p-7 md:p-14 rounded-lg grid gap-4 grid-cols-1 md:grid-cols-2 text-white">
                 <!-- text-section -->
                 <div class="flex items-center">
                     <div>
-                        <h1 class="text-xl md:text-6xl font-bold mb-7">Meet Our Super <br> Clients</h1>
+                        <h1 class="text-2xl md:text-6xl font-bold mb-7">Meet Our Super <br> Clients</h1>
                         <p class="md:w-3/4">There are many variations of passages of Lorem Ipsum available, but the
                             majority
                             have suffered
@@ -182,8 +182,8 @@
                 <div class="py-20">
                     <div class="relative">
                         <!-- middle card -->
-                        <div class="absolute z-10 top-32 left-5">
-                            <div class="relative h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                        <div class="absolute z-10 top-32 md:left-5">
+                            <div class="relative md:h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-3 py-14 md:py-0 md:px-8">
                                 <!-- img client -->
                                 <div class="absolute -top-5 -left-5 bg-white rounded-full">
                                     <img class="p-1" src="./images/client.png" alt="">
@@ -203,7 +203,7 @@
                         </div>
                         <!-- top card -->
                         <div
-                            class="relative left-36 opacity-40 h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                            class="relative md:left-36 opacity-40 h-64 md:h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8 pt-8 md:pt-0">
                             <!-- img client -->
                             <div class="absolute -top-5 -left-5 bg-white rounded-full">
                                 <img class="p-1" src="./images/client.png" alt="">
@@ -220,7 +220,7 @@
 
                         <!-- bottom card -->
                         <div
-                            class="relative left-36 top-10 opacity-40 h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8">
+                            class="relative md:left-36 top-10 opacity-40 h-64 md:h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-8 pt-8 md:pt-0">
                             <!-- img client -->
                             <div class="absolute -top-5 -left-5 bg-white rounded-full">
                                 <img class="p-1" src="./images/client.png" alt="">
