completed news and event section with Responsive

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </section>
 
         <!-- review section -->
-        <section class="mt-20">
+        <section class="mt-10 md:mt-20">
             <!-- review main container -->
             <div
                 class="bg-gradient-to-r from-orange-400 to-red-600 p-7 md:p-14 rounded-lg grid gap-4 grid-cols-1 md:grid-cols-2 text-white">
@@ -183,7 +183,8 @@
                     <div class="relative">
                         <!-- middle card -->
                         <div class="absolute z-10 top-32 md:left-5">
-                            <div class="relative md:h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-3 py-14 md:py-0 md:px-8">
+                            <div
+                                class="relative md:h-56 w-full md:w-3/4 bg-white rounded-lg flex items-center px-3 py-14 md:py-0 md:px-8">
                                 <!-- img client -->
                                 <div class="absolute -top-5 -left-5 bg-white rounded-full">
                                     <img class="p-1" src="./images/client.png" alt="">
@@ -236,6 +237,53 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </section>
+
+        <!-- news & events section -->
+        <section class="mt-10 md:mt-20">
+            <!-- title section -->
+            <div class="text-center">
+                <h1 class="text-2xl md:text-6xl font-bold mb-7">News & Events</h1>
+                <p class="md:w-3/4 mx-auto text-gray-500">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
+            <!-- news container section -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-10">
+                <!-- card-1 -->
+                <div class="p-7 border rounded-lg">
+                    <div>
+                        <img class="w-full" src="./images/news-1.png" alt="">
+                        <p class="text-gray-500 font-medium mt-4">Feb 05, 2027</p>
+                        <h3 class="text-xl font-bold mt-4">Collecting 8 points for <br> discount</h3>
+                        <p class="text-gray-500 mt-1">There are many variations of passages of Lorem Ipsum
+                            available.</p>
+                        <h3 class="text-lg font-bold mt-1">Learn More</h3>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="p-7 border rounded-lg">
+                    <div>
+                        <img class="w-full" src="./images/news-2.png" alt="">
+                        <p class="text-gray-500 font-medium mt-4">Feb 05, 2027</p>
+                        <h3 class="text-xl font-bold mt-4">Collecting 8 points for <br> discount</h3>
+                        <p class="text-gray-500 mt-1">There are many variations of passages of Lorem Ipsum
+                            available.</p>
+                        <h3 class="text-lg font-bold mt-1">Learn More</h3>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="p-7 border rounded-lg">
+                    <div>
+                        <img class="w-full" src="./images/news-3.png" alt="">
+                        <p class="text-gray-500 font-medium mt-4">Feb 05, 2027</p>
+                        <h3 class="text-xl font-bold mt-4">Collecting 8 points for <br> discount</h3>
+                        <p class="text-gray-500 mt-1">There are many variations of passages of Lorem Ipsum
+                            available.</p>
+                        <h3 class="text-lg font-bold mt-1">Learn More</h3>
+                    </div>
                 </div>
             </div>
         </section>
