--- a/index.html
+++ b/index.html
@@ -288,6 +288,91 @@
             </div>
         </section>
     </main>
+
+    <!-- footer section -->
+    <footer class="mt-10 md:mt-20 bg-red-50">
+        <!-- footer container -->
+        <div class="max-w-screen-2xl mx-auto py-16 md:pt-28 px-10 lg:px-28 text-gray-600">
+            <!-- ready started box -->
+            <div class="flex items-center justify-between">
+                <!-- icon -->
+                <div>
+                    <img class="w-12" src="./images/cup.png" alt="">
+                </div>
+                <!-- started btn -->
+                <div class="md:flex items-center gap-8">
+                    <h2 class="text-xl font-medium">Ready to get started?</h2>
+                    <button
+                        class="bg-gradient-to-r from-orange-500 to-red-600 px-5 py-3 rounded-lg text-white text-lg font-medium mt-5 md:mt-0 ">
+                        Get Started
+                    </button>
+                </div>
+            </div>
+
+            <!-- footer services and link section -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mt-20">
+                <!-- column 1 -->
+                <div>
+                    <h2 class="text-black text-xl font-bold">Quick Links</h2>
+                    <ul class="mt-7">
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Home</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">About Us</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Insurance</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- column 2 -->
+                <div>
+                    <h2 class="text-black text-xl font-bold">Our Service</h2>
+                    <ul class="mt-7">
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Life Insurance</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Car Insurance</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Health Insurance</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">House Insurance</a></li>
+                    </ul>
+                </div>
+                <!-- column 3 -->
+                <div>
+                    <h2 class="text-black text-xl font-bold">Help</h2>
+                    <ul class="mt-7">
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">FAQs</a></li>
+                        <li class="text-lg mt-3 hover:text-red-500"><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- column 4 -->
+                <div>
+                    <h2 class="text-black text-xl font-bold">Subscribe to our <br> newsletter</h2>
+                    <ul class="mt-12">
+                        <li>
+                            <div class="flex items-center justify-between">
+                                <p>Email address</p>
+                                <button
+                                    class="bg-gradient-to-r from-orange-500 to-red-600 h-10 w-10 rounded-full text-white text-lg font-medium mt-5 md:mt-0 ">
+                                    <i class="fa-solid fa-chevron-right"></i>
+                                </button>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="h-[2px] bg-gray-400 mt-5"></div>
+                        </li>
+                        <li>
+                            <!-- social links -->
+                            <div class="flex gap-5 mt-3">
+                                <a class="hover:text-red-500 duration-200" href="#"><i
+                                        class="text-2xl fa-brands fa-facebook-f"></i></a>
+                                <a class="hover:text-red-500 duration-200" href="#"><i
+                                        class="text-2xl fa-brands fa-twitter"></i></a>
+                                <a class="hover:text-red-500 duration-200" href="#"><i
+                                        class="text-2xl fa-brands fa-square-instagram"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="text-center mt-16 text-xl">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
